--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.1",
-    "vue": "^3.2.13",
-    "vue-router": "^4.1.3"
+    "vue": "^3.2.37",
+    "vue-chartjs": "^4.1.1",
+    "vue-router": "^4.1.3",
+    "vue-scharts": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
